tests/baselines/reference/pathMappingBasedModuleResolution2_classic.errors.txt
root/tsconfig.json(2,5): error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
root/tsconfig.json(3,9): error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
  Visit https://aka.ms/ts6 for migration information.
root/tsconfig.json(5,13): error TS5061: Pattern '*1*' can have at most one '*' character.
root/tsconfig.json(5,22): error TS5062: Substitution '*2*' in pattern '*1*' can have at most one '*' character.


==== root/tsconfig.json (4 errors) ====
    {
        "compilerOptions": {
        ~~~~~~~~~~~~~~~~~
!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
            "baseUrl": "./src",
            ~~~~~~~~~
!!! error TS5101: Option 'baseUrl' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
!!! error TS5101:   Visit https://aka.ms/ts6 for migration information.
            "paths": {
                "*1*": [ "*2*" ]
                ~~~~~
!!! error TS5061: Pattern '*1*' can have at most one '*' character.
                         ~~~~~
!!! error TS5062: Substitution '*2*' in pattern '*1*' can have at most one '*' character.
            }
        }
    }
    
==== root/src/folder1/file1.ts (0 errors) ====
    export var x = 1;